--- a/Main.html
+++ b/Main.html
@@ -208,6 +208,10 @@
       <div class="Right-Column split">
         <div  class="container">
         <div class="header-box">
+          <video autoplay muted loop>
+            <source src="./img/Particles_47___45s___4k_res.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
           <div class="text-side">
             <h1>
               <a
