--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="intro-box">
             <h2>Ahmed Tarek Mohamed</h2>
             <h3>Full Stack Developer</h3>
-            <h3>Fresh Graduate</h3>
+            <h3>Junior Developer</h3>
         </div>
         <div class="container">
           <div class="info-box">
