--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                     balancing front-end aesthetics with robust back-end
                     functionality.
                   </p>
-                  <a>Oct 2024 - Till Now</a>
+                  <a>Oct 2024 - Feb 2025</a>
                 </div>
                 <div class="experience">
                   <h2>SRACO</h2>
@@ -437,7 +437,7 @@
                   <p>
                     Participated in an innovation-driven program that emphasized
                     deploying and managing web applications using RunCloud, with
-                    a focus on automating server management tasks.
+                    a focus on automating services management tasks.
                   </p>
                   <a
                     href="https://drive.google.com/file/d/1vMFwyrTrncJqhRXpxU49hCBkgiBp_yPY/view?usp=sharing"
